--- a/style/_heading.scss
+++ b/style/_heading.scss
@@ -54,7 +54,7 @@ body {
 
 // 编辑视图
 .markdown-source-view.mod-cm6 .cm-fold-indicator .collapse-indicator {
-  padding-right: 15px;
+  padding-right: 15px !important;
 }
 
 .HyperMD-header {
@@ -73,11 +73,11 @@ body {
     white-space: nowrap;
   }
 
-  &:hover {
-    &::before {
-      // opacity: 0;
-    }
-  }
+  // &:hover {
+  //   &::before {
+  //     opacity: 0;
+  //   }
+  // }
 
   &.HyperMD-header-1:before {
     content: "h1" !important;
